# mcp-calculator-102

./: README.md  main.py  pyproject.toml
src/mcp_calculator_kel/: __init__.py  __main__.py  server.py
